--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -39,17 +39,13 @@
 
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    #bd34fe 30%,
-    #41d1ff
-  );
+  --vp-home-hero-name-background: -webkit-linear-gradient(120deg,
+      #bd34fe 30%,
+      #41d1ff);
 
-  --vp-home-hero-image-background-image: linear-gradient(
-    -45deg,
-    #bd34fe 50%,
-    #47caff 50%
-  );
+  --vp-home-hero-image-background-image: linear-gradient(-45deg,
+      #bd34fe 50%,
+      #47caff 50%);
   --vp-home-hero-image-filter: blur(40px);
 }
 
@@ -87,4 +83,46 @@
 
 .DocSearch {
   --docsearch-primary-color: var(--vp-c-brand) !important;
+}
+
+
+@media (prefers-reduced-motion) {
+  path {
+    animation: none !important;
+    stroke-dasharray: unset !important;
+  }
+}
+
+@keyframes grow {
+  0% {
+    stroke-dasharray: 0 1500px;
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 1;
+  }
+
+  40% {
+    stroke-dasharray: 1500px 0;
+  }
+
+  /* Moving back */
+  85% {
+    stroke-dasharray: 1500px 0;
+  }
+
+  95%,
+  to {
+    stroke-dasharray: 0 1500px;
+  }
+}
+
+#logo {
+  font-size: 8px;
+  stroke-dashoffset: 1px;
+  stroke-dasharray: 1500px 0;
+  animation: grow 10s ease forwards infinite;
+  stroke: #303030;
+  animation-delay: 0s;
 }
